# Tsukasa-credit-card-gag-scam

./: .gitignore  README.md  pyproject.toml  script.py
docs/: index.rst
src/: script.py
